[package]
name = "world_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noise = { version = "0.8.2", features = ["images"] }
rand = "0.8.5"
image = "0.24.0"
priority-queue = "1.3.2"
serde = "1.0.195"
serde_json = "1.0.102"
robotics_lib = {version = "0.1.8" , registry = "kellnr"}